ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cv-nuxt
  namespace: cv-nuxt
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: cv.binarydream.fi
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cv-nuxt
                port:
                  number: 3000
  tls:
    - secretName: cv-nuxt-tls
      hosts:
        - cv.binarydream.fi
